<resources>
    <string name="app_name">GoTogether</string>
    <string name="home_menu_search">home_menu_search</string>
    <string name="title_activity_get_direction_maps">GetDirectionMapsActivity</string>
    <string name="title_activity_tracking_maps">TrackingMapsActivity</string>
    <string name="my_location">Vị trí của tôi</string>
    <string name="choose_from_map">Chọn từ bản đồ</string>
    <string name="search">Tìm kiếm</string>
    <string name="search_a_place">Tìm kiếm vị trí</string>
    <string name="start_point">Điểm bắt đầu</string>
    <string name="end_point">Điểm kết thúc</string>
    <string name="title_activity_get_location_from_map">GetLocationFromMapActivity</string>
    <string name="drop_location">Drop Location</string>
    <string name="price_per_km">Giá tiền mỗi km</string>
    <string name="add_stop_location">Thêm điểm dừng</string>
    <string name="cancel">Huỷ</string>
    <string name="publish">Publish</string>
    <string name="find_place">Tìm kiếm địa điểm</string>
    <string name="date">Ngày khởi hành</string>
    <string name="_0">0</string>
    <string name="input_license_plate">Nhập biển số xe</string>
    <string name="description">Mô tả</string>
    <string name="transport_name">Nhập tên phương tiện</string>
    <string name="add">Add</string>
    <string name="publish_route">Publish route</string>
    <string name="back">Quay lại</string>
    <string name="public_trip">Chuyến đi chia sẻ</string>
    <string name="regit_trip">Chuyến đi đăng kí</string>
    <string name="driver_info">Thông tin tài xế</string>
    <string name="trip_info">Thông chuyến đi</string>
    <string name="passenger_info">Thông tin hành khách</string>
    <string name="join_list">Danh sách tham gia</string>
    <string name="waiting_list">Danh sách chờ duyệt</string>
    <string name="delete">Delete</string>
    <string name="regiter_trip">Bạn muốn đăng kí tham gia chuyến đi này chứ?</string>
    <string name="ok">Đồng ý</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string-array name="transport_array">
        <item>Car</item>
        <item>Bus</item>
        <item>Bike</item>
        <item>Motorbike</item>
    </string-array>
    <string name="title_activity_maps_test">MapsTestActivity</string>
    <string name="logout">Đăng xuất</string>
    <string name="start_place">Điểm bắt đầu</string>
    <string name="end_palce">Điểm kết thúc</string>
    <string name="start_date">Ngày khởi hành</string>
    <string name="_1">1</string>
    <string name="comment">Nhận xét</string>
    <string name="send">Gửi</string>
    <string name="waiting_trip">Danh sách chờ chấp nhận</string>
    <string name="app_title">Go Together</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="register">Đăng kí</string>
    <string name="other_login">Hoặc đăng kí với tài khoản mạng xã hội</string>
    <string name="msg_content">Nội dung tin nhắn</string>
    <string name="stop_list">Danh sách điểm dừng</string>
    <string name="detail_rating">Xem chi tiết</string>
    <string name="start">Bắt đầu</string>
    <string name="end">Kết thúc</string>
    <string name="no_public_trip">Không có chuyến đi nào được chia sẻ</string>
    <string name="no_regit_trip">Không có chuyến đi nào được chấp thuận</string>
    <string name="no_regit_trip2">Không có chuyến đi nào được đăng kí</string>
    <string name="cancel_trip">Huỷ chuyến đi</string>
    <string name="unrated_list">Danh sách chưa đánh giá</string>
    <string name="no_trip">Không có chuyến đi nào</string>
    <string name="rated_list">Danh sách đánh giá</string>
    <string name="delete_trip">Bạn muốn huỷ chuyến đi này chứ ?</string>
    <string name="start_trip_ques">Bạn muốn bắt đầu chuyến đi này chứ?</string>
    <string name="danh_gia">Đánh giá:</string>
</resources>