<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="6dp"
        tools:context=".ui_layer.activity.profile.AddTransportActivity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transport_name"
            android:id="@+id/name"
            android:layout_marginTop="10dp"
            android:inputType="text"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_license_plate"
            android:id="@+id/license_plate"
            android:layout_marginTop="10dp"
            android:inputType="text"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:id="@+id/description"
            android:layout_marginTop="10dp"
            android:inputType="text"/>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transport_type"
            android:layout_marginTop="10dp"
            android:entries="@array/transport_array"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/btn_add"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/btn_cancel"
                android:layout_weight="1"
                android:layout_marginTop="10dp"/>
    </LinearLayout>

</LinearLayout>