<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui_layer.activity.authen.LoginActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:gravity="center"
            android:background="@drawable/green_border"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textStyle="bold"
                android:textSize="50sp"
                android:textColor="#E5D9B6"
                android:layout_gravity="center"
                android:gravity="center"
                />
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/account_circle_24"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:background="@drawable/login_border"
            android:id="@+id/username"
            android:hint="@string/username"/>
        <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/password_18"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:background="@drawable/login_border"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:gravity="right"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/quantum_orange400"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/dark_green"
                android:textColor="@color/soft_yellow"
                android:text="@string/login"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_register"
                android:backgroundTint="#FED049"
                android:layout_marginTop="20dp"
                android:textColor="#3D5656"
                android:text="@string/register"/>
<!--        <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/other_login"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:gravity="center"/>-->
<!--        <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:gravity="center">-->
<!--                -->

<!--        </LinearLayout>-->


    </LinearLayout>

</LinearLayout>

</layout>